# BiblioInbox

./: .env.template  .gitignore  Dockerfile  Dockerfile.worker  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: db.py  main.py  models.py  services.py
app/email/: mail_utils.py  worker.py
app/nlu/: intent_router.py
